[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogueTrigger/DialogTrigger.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[node name="DialogTrigger" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="DialogSound" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_DialogTrigger_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="finished" from="DialogSound" to="." method="_on_DialogSound_finished"]
